--- a/tools/power/acpi/Makefile
+++ b/tools/power/acpi/Makefile
@@ -1,11 +1,10 @@
-PROG=	acpidump
+PROG= acpidump
 SRCS=	acpidump.c
 KERNEL_INCLUDE := ../../../include
-CFLAGS += -Wall -Wstrict-prototypes -Os -s -D_LINUX -DDEFINE_ALTERNATE_TYPES -I$(KERNEL_INCLUDE) 
+CFLAGS += -Wall -Wstrict-prototypes -Wdeclaration-after-statement -Os -s -D_LINUX -DDEFINE_ALTERNATE_TYPES -I$(KERNEL_INCLUDE) 
 
 all: acpidump
-
-acpidump : $(SRCS) 
+$(PROG) : $(SRCS)
 	$(CC) $(CFLAGS) $(SRCS) -o $(PROG)
 
 CLEANFILES= $(PROG)
